# NBA_analysis

./: .gitignore  BLOG_COMPARISON.md  CACHE_COMPRESSION_PLAN.md  CLAUDE.md  DATA.md  FINDINGS.md  FINDINGS_ACCOUNTING.md  FINDINGS_NEW.md  FINDINGS_OUTLINE.md  FINDINGS_SEEDING.md  MODEL_USAGE.md  PLAN-STATS.md  PLAN.md  PROMPT_GENERATE_FINDINGS.md  QUARTO_MIGRATION_PLAN.md  README.md  RESULTS.md  STATISTICAL_METHODS.md  STATS_EXPLAINER.md  STATS_TUTORIAL.md  SUMMARY.md  backup_cache.sh  deploy.sh  generate_doc_pdf.py  generate_report.py  generate_summary.py  generate_tutorial_figures.py  index.html  knicks_2026_historic.py  knicks_2026_plots.py  nba_home_court_advantage.py  nba_home_court_data.py  nba_home_court_plots.py  nba_home_court_regression.py  nba_home_court_summary_plots.py  project_definition.md  pytest.ini  requirements.txt  test_nba_home_court_advantage.py  test_nba_home_court_plots.py  (+3 more)
guides/: stats_tutorial.html
nbakit/: pyproject.toml
nbakit/nbakit/: bbr.py  data.py  docs.py  espn.py  facts.py  mdpdf.py  player_crosswalk.py  ratings.py  report.py  sentence_split.py  stats.py  teams.py  textfmt.py  viz.py
nbakit/nbakit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nbakit/quarto/: _nba.yml
nbakit/tests/: test_bbr.py  test_cache_io.py  test_compress_cache.py  test_data.py  test_docs.py  test_espn.py  test_facts.py  test_mdpdf.py  test_pbp.py  test_ratings_boxscore.py  test_ratings_rapm.py  test_report.py  test_sentence_split.py  test_shard_cache.py  test_stats.py  test_teams.py
nbakit/tools/: compress_cache.py  shard_cache.py
(+318 files in other folders)
