[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nbakit"
version = "0.1.0"
description = "Shared NBA analysis infrastructure"
requires-python = ">=3.11"
dependencies = [
    "nba_api>=1.11.4",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "jinja2>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nbakit*"]
